fixed warehouse inventory not showing up and styling everywhere

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -6,8 +6,10 @@
     padding: $mobile-main-padding;
     background-color: $color-graphite;
     padding-bottom: 5rem;
+    height: 15rem;
 
     @include tablet {
+        height: 12rem;
         display: flex;
         justify-content: space-between;
         padding: 1rem $tablet-main-padding;
@@ -31,6 +33,10 @@
             padding: 0;
             justify-content: start;
         }
+
+        &-src {
+            width: 10rem;
+        }
     }
 
     &__buttons {
@@ -39,6 +45,7 @@
         
         @include tablet {
             width: 20rem;
+            align-items: center;
         }
 
 
